--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,3 @@
 @import 'components/MoviesSearch/MoviesSearch';
 @import 'components/MoviesList/MoviesList';
+@import 'components/MovieDetails/MovieDetails';
